--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -20,3 +20,23 @@ body {
 
     margin: 0px auto;
 }
+@media (max-width: 1439px) {
+    .container {
+        width: 1024px;
+    }
+}
+@media (max-width: 1039px) {
+    .container {
+        width: 768px;
+    }
+}
+@media (max-width: 767px) {
+    .container {
+        width: 425px;
+    }
+}
+@media (max-width: 424px) {
+    .container {
+        width: auto;
+    }
+}
