--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -21,3 +21,21 @@
 .footer-nav > span:nth-child(1) {
     font-size: 32px;
 }
+@media (max-width: 1024px) {
+    .footer-frame {
+        justify-content: space-between;
+        padding: 45px 20px;
+    }
+}
+@media (max-width: 768px) {
+    .footer-frame {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: flex-start;
+        padding: 20px;
+        gap: 20px;
+    }
+    .footer-nav {
+        align-items: center;
+    }
+}
