feat: add some news and adaptivity to news section

--- a/src/components/NewsSection/NewsSection.css
+++ b/src/components/NewsSection/NewsSection.css
@@ -1,8 +1,10 @@
 .news-frame {
-    outline: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     background-color: rgba(220, 241, 255, 0.171);
+}
+.news-frame > h1 {
+    text-align: center;
 }
