--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,6 +34,7 @@
         justify-content: flex-start;
         padding: 20px;
         gap: 20px;
+        box-shadow: none;
     }
     .footer-nav {
         align-items: center;
