--- a/src/components/NewsFrame/NewsFrame.css
+++ b/src/components/NewsFrame/NewsFrame.css
@@ -1,7 +1,7 @@
 .newsframe-frame {
     width: 80%;
-    outline: 1px solid black;
     padding: 20px;
+    outline: 4px solid black;
 
     margin-bottom: 20px;
 
@@ -15,6 +15,7 @@
 }
 .newsframe-frame > h1 {
     margin: 0;
+    text-align: center;
 }
 .newsframe-navigation {
     display: flex;
@@ -93,4 +94,59 @@
 .newsframe-navigation > button:active {
     border-width: 4px 0 0;
     background: none;
+}
+.button-modal {
+    background-color: red;
+    color: white;
+    border-radius: 5px;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+}
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+
+    max-height: 90vh;
+    overflow-y: auto;
+
+    border-radius: 10px;
+}
+.newsframe-counter {
+    font-size: 12px;
+}
+.newsframe-frame > img {
+    width: 600px;
+    height: 400px;
+
+    border-radius: 10px;
+}
+.modal > span {
+    font-size: 24px;
+}
+.modal > h1 {
+    text-align: center;
+}
+@media (max-width: 1439px) {
+    .newsframe-frame > img {
+        width: 700px;
+    }
+}
+@media (max-width: 1039px) {
+    .newsframe-frame > img {
+        width: 500px;
+        height: 200px;
+    }
+}
+@media (max-width: 767px) {
+    .newsframe-frame > img {
+        width: 280px;
+    }
+    .popup-content {
+        width: 80% !important;
+    }
+}
+@media (max-width: 334px) {
 }
