--- a/src/components/NewsFrame/NewsFrame.css
+++ b/src/components/NewsFrame/NewsFrame.css
@@ -60,86 +60,90 @@
     background-color: rgba(0, 0, 0, 0.422);
     padding: 20px 0;
 }
-.newsframe-navigation > button {
-    font-size: 16px;
-    color: black;
-    padding: 5px;
-    width: 100px;
-    cursor: pointer;
-    background-color: beige;
-}
-
-.newsframe-navigation > button {
-    appearance: button;
-    background-color: #1899d6;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 4px;
+.newsframe-navigation > button,
+.button-modal {
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px -1px,
+        rgba(0, 0, 0, 0.14) 0 6px 10px 0, rgba(0, 0, 0, 0.12) 0 1px 18px 0;
     box-sizing: border-box;
-    color: #ffffff;
+    color: #3c4043;
     cursor: pointer;
-    display: inline-block;
-    font-family: din-round, sans-serif;
-    font-size: 15px;
-    font-weight: 700;
-    letter-spacing: 0.8px;
-    line-height: 20px;
-    margin: 0;
-    outline: none;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: 0.25px;
+    line-height: normal;
+    max-width: 100%;
     overflow: visible;
-    padding: 13px 16px;
+    padding: 2px 24px;
+    position: relative;
     text-align: center;
-    text-transform: uppercase;
-    touch-action: manipulation;
-    transform: translateZ(0);
-    transition: filter 0.2s;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1),
+        opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, 0.2, 1) 0ms;
     user-select: none;
     -webkit-user-select: none;
-    vertical-align: middle;
-    white-space: nowrap;
-    width: 80px;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform, opacity;
+    z-index: 0;
 }
 
-.newsframe-navigation > button:after {
-    background-clip: padding-box;
-    background-color: #1cb0f6;
-    border: solid transparent;
-    border-radius: 16px;
-    border-width: 0 0 4px;
-    bottom: -4px;
-    content: "";
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
+.newsframe-navigation > button:hover,
+.button-modal:hover {
+    background: #f6f9fe;
+    color: #174ea6;
 }
 
-.newsframe-navigation > button,
-.newsframe-navigation > button:focus {
-    user-select: auto;
+.newsframe-navigation > button:active,
+.button-modal:active {
+    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%),
+        0 8px 12px 6px rgb(60 64 67 / 15%);
+    outline: none;
 }
 
-.newsframe-navigation > button:hover:not(:disabled) {
-    filter: brightness(1.1);
-    -webkit-filter: brightness(1.1);
+.newsframe-navigation > button:focus,
+.button-modal:focus {
+    outline: none;
+    border: 2px solid #4285f4;
 }
 
-.newsframe-navigation > button:disabled {
-    cursor: auto;
+.newsframe-navigation > button:not(:disabled),
+.button-modal:not(:disabled) {
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+        rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
 }
 
-.newsframe-navigation > button:active {
-    border-width: 4px 0 0;
-    background: none;
+.newsframe-navigation > button:not(:disabled):hover,
+.button-modal:not(:disabled):hover {
+    box-shadow: rgba(60, 64, 67, 0.3) 0 2px 3px 0,
+        rgba(60, 64, 67, 0.15) 0 6px 10px 4px;
 }
-.button-modal {
-    background-color: red;
-    color: white;
-    border-radius: 5px;
-    width: 50px;
-    height: 50px;
-    font-size: 30px;
+
+.newsframe-navigation > button:not(:disabled):focus,
+.button-modal:not(:disabled):focus {
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+        rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
+}
+
+.newsframe-navigation > button:not(:disabled):active,
+.button-modal:not(:disabled):active {
+    box-shadow: rgba(60, 64, 67, 0.3) 0 4px 4px 0,
+        rgba(60, 64, 67, 0.15) 0 8px 12px 6px;
+}
+
+.newsframe-navigation > button:disabled,
+.button-modal:disabled {
+    box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
+        rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
 }
 .modal {
     display: flex;
