feat: add button component from MUI

--- a/src/components/NewsFrame/NewsFrame.css
+++ b/src/components/NewsFrame/NewsFrame.css
@@ -60,7 +60,7 @@
     background-color: rgba(0, 0, 0, 0.422);
     padding: 20px 0;
 }
-.newsframe-navigation > button,
+/* .newsframe-navigation > button,
 .button-modal {
     align-items: center;
     appearance: none;
@@ -143,7 +143,7 @@
 .button-modal:disabled {
     box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
         rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
-}
+} */
 .modal {
     display: flex;
     flex-direction: column;
