--- a/src/components/PartnersList/PartnersList.css
+++ b/src/components/PartnersList/PartnersList.css
@@ -7,6 +7,17 @@
 
     padding: 20px;
 }
+.MuiBox-root {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+
+    justify-content: space-around;
+
+    gap: 30px;
+}
 @media (max-width: 424px) {
     .partnerslist-frame {
         padding: 20px 0;
