--- a/src/components/NewsFrame/NewsFrame.css
+++ b/src/components/NewsFrame/NewsFrame.css
@@ -1,13 +1,11 @@
 .newsframe-frame {
     width: 80%;
-    padding: 20px;
-    outline: 4px solid black;
+    padding: 0px;
+    outline: 4px solid rgb(224, 224, 224);
 
     position: relative;
 
     margin-bottom: 20px;
-
-    border-radius: 10px;
 
     background-color: white;
 }
@@ -17,12 +15,13 @@
 }
 .newsframe-frame > div:nth-child(2) {
     position: absolute;
-    width: 96.7%;
+    width: 100%;
 
     bottom: 70%;
 
-    color: black;
-    background-color: rgb(251, 251, 251);
+    background-color: rgba(0, 0, 0, 0.637);
+    backdrop-filter: blur(10px);
+    color: white;
 
     display: flex;
     justify-content: center;
@@ -31,13 +30,17 @@
     position: absolute;
     bottom: 50%;
 
-    background-color: rgba(255, 255, 255, 0.63);
+    background-color: rgba(0, 0, 0, 0.637);
+    backdrop-filter: blur(10px);
+    color: white;
     font-size: 20px;
-    width: 96.7%;
+    width: 100%;
 
     display: flex;
     justify-content: center;
     padding: 20px 0;
+
+    text-align: center;
 }
 .newsframe-frame > img {
     width: 100%;
@@ -47,7 +50,7 @@
 }
 .newsframe-navigation {
     display: flex;
-    width: 96.7%;
+    width: 100%;
     justify-content: space-between;
 
     position: absolute;
@@ -83,41 +86,7 @@
 .modal > h1 {
     text-align: center;
 }
-@media (max-width: 1439px) {
-    .newsframe-frame > div:nth-child(2) {
-        width: 95.3%;
-    }
-    .newsframe-frame > div:nth-child(3) {
-        width: 95.3%;
-    }
-    .newsframe-navigation {
-        width: 95.3%;
-    }
-}
-@media (max-width: 1039px) {
-    .newsframe-frame > div:nth-child(2) {
-        width: 93.9%;
-    }
-    .newsframe-frame > div:nth-child(3) {
-        width: 93.9%;
-    }
-    .newsframe-navigation {
-        width: 93.9%;
-    }
-}
 @media (max-width: 767px) {
-    .popup-content {
-        width: 80% !important;
-    }
-    .newsframe-frame > div:nth-child(2) {
-        width: 89.5%;
-    }
-    .newsframe-frame > div:nth-child(3) {
-        width: 89.5%;
-    }
-    .newsframe-navigation {
-        width: 89.5%;
-    }
     .newsframe-frame > img {
         height: 400px;
     }
@@ -126,14 +95,5 @@
     .newsframe-frame {
         width: 320px;
         padding: 20px 0;
-    }
-    .newsframe-frame > div:nth-child(2) {
-        width: 100%;
-    }
-    .newsframe-frame > div:nth-child(3) {
-        width: 100%;
-    }
-    .newsframe-navigation {
-        width: 100%;
     }
 }
